# SWE_MTH9815

./: LICENSE  README.md
tradingsystem/: CMakeLists.txt  GUIService.hpp  algoexecutionservice.hpp  algostreamingservice.hpp  executionservice.hpp  historicaldataservice.hpp  inquiryservice.hpp  marketdataservice.hpp  positionservice.hpp  pricingservice.hpp  products.hpp  riskservice.hpp  soa.hpp  streamingservice.hpp  tradebookingservice.hpp  tradingsystem.cpp
tradingsystem/data/: gui.txt  inquiries.txt  mktdata.txt  prices.txt  trades.txt
tradingsystem/utils/: utils.hpp
